# harnesskit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  DESIGN.md  Makefile  README.md  ROADMAP.md  RULES.md  candidate.md  lychee.toml  pyproject.toml  report.md  todo.md
.harnesskit/: config.json  facts.md
.harnesskit/rules/: RULE-AI-001.md  RULE-AI-002.md  RULE-AI-003.md  RULE-AI-004.md  RULE-ARCH-001.md  RULE-ARCH-002.md  RULE-ARCH-003.md  RULE-ARCH-004.md  RULE-DOMAIN-001.md  RULE-ENG-001.md  RULE-ENG-002.md  RULE-ENG-003.md  RULE-ENG-004.md  RULE-ENG-005.md  RULE-PRODUCT-001.md  RULE-SEC-001.md  RULE-SEC-002.md  RULE-STACK-001.md  RULE-STACK-002.md  RULE-STACK-003.md  RULE-STACK-004.md  RULE-STYLE-001.md
.mykit/: config.json
docs/: DESIGN.md  GUARD.md  ROADMAP.md  RULES.md  harnesskit-report.html  index.html  report.md  vercel.json
docs/design/: AGENTS.md  ARCHITECTURE.md  DESIGN.md  GUARD.md  RULES.md  VALIDATION.md
docs/practices/: CODING.md  PRODUCT_SENSE.md  RELIABILITY.md  SECURITY.md
harness-linter-poc/: README.md  RULES.md  harness_lint.py  test_architecture_rules.py  test_harness_lint.py  test_project_rules.py  test_skill_rules.py  test_tech_stack_rules.py
harness-linter-poc/app/: harness_lint.py
harness-linter-poc/core/: constants.py  issues.py
harness-linter-poc/harness_lint_rules/: architecture.py  config.py  constants.py  core.py  markdown.py  models.py  project.py  skills.py  tech_stack.py  verification.py
harness-linter-poc/rules/: __init__.py  architecture.py  project.py  skills.py  verification.py
harness-linter-poc/tests/: conftest.py  test_cli.py  test_config_rules.py  test_markdown_rules.py  test_rule_detail_rules.py  (+3 more)
scripts/: publish_pypi.sh
templates/: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  RULES.md  candidate.md
tests/: test_harnesskit_cli.py  test_init.py
(+124 files in other folders)
