[project]
name = "mykit"
version = "0.1.0"
description = "Context Harness CLI and Codex-facing toolkit."
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
mykit = "mykit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mykit"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "mykit/templates"
