[project]
name = "harnesskit"
version = "0.1.0"
description = "HarnessKit Context Harness CLI and Codex-facing toolkit."
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
harnesskit = "harnesskit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harnesskit"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "harnesskit/templates"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
